[package]
name = "coded-chars"
version = "0.1.4"
edition = "2021"
description = "An implementation of the ECMA-48 standard."
license = "MIT"
repository = "https://github.com/Trehinos/coded-chars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
