[package]
name = "coded-chars"
version = "3.0.0"
edition = "2021"
description = "An implementation to create control strings defined in the ECMA-48 standard."
license = "MIT"
repository = "https://github.com/Trehinos/coded-chars"
categories = ["command-line-interface"]
keywords = ["ecma-48", "ansi", "terminal", "csi", "color"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
